[r=blake-rouse][bug=][author=ricgard] Update to storage markup, fixing alignment, form ordering and hover states.

--- a/src/maasserver/static/scss/maas/pages/_nodes.scss
+++ b/src/maasserver/static/scss/maas/pages/_nodes.scss
@@ -287,6 +287,21 @@
     display: block;
     margin-top: 11px;
     color: #BCBCBC;
+
+    a {
+      color: #BCBCBC;
+
+      &:hover {
+        color: $ubuntu-orange;
+      }
+    }
+
+    &.active {
+
+      a {
+        color: $ubuntu-orange;
+      }
+    }
   }
 
   .details__controls {
@@ -326,6 +341,30 @@
         &--secondary {
           z-index: 1;
           opacity: 1;
+        }
+      }
+    }
+
+    &.active {
+
+      &:hover {
+
+        .details__input {
+          background-color: transparent;
+          border-color: transparent;
+          pointer-events: none;
+        }
+
+        .details__controls {
+          opacity: 0;
+          z-index: -1000;
+          pointer-events: none;
+
+          &--secondary {
+            z-index: -1000;
+            opacity: 0;
+            pointer-events: none;
+          }
         }
       }
     }
@@ -375,6 +414,10 @@
           &:before {
              border: 0;
           }
+        }
+
+        .details__text {
+          line-height: 37px;
         }
     }
 
